<resources>
    <string name="app_name">AIFPU SELF SERVICE v1.0</string>
    <string name="text_aifpu_h_desk">AIFPU SELF SERVICE</string>
    <string name="text_aifpu_h_desk_version">v1.0</string>
    <string-array name="help_desk_list">
        <item>Admission Requirement</item>
        <item>How To Check Admission</item>
        <item>How To Register Course</item>
        <item>How To Generate Remita From Your Portal</item>
    </string-array>
    <string name="button_all_departments">All Departments</string>
    <string name="text_aifpu_departments">AIFPU DEPTS</string>
    <string-array name="department_list">
        <item>ACCOUNTANCY</item>
        <item>AGRICULTURAL TECHNOLOGY</item>
        <item>ARCHITECTURAL TECHNOLOGY</item>
        <item>BUILDING TECHNOLOGY</item>
        <item>BUSINESS ADMINISTRATION &amp; MANAGEMENT</item>
        <item>CIVIL ENGINEERING TECHNOLOGY</item>
        <item>COMPUTER ENGINEERING</item>
        <item>COMPUTER SCIENCE</item>
        <item>ELECTRICAL/ELECTRONICS ENGINEERING</item>
        <item>ESTATE MANAGEMENT AND VALUATION</item>
        <item>FOOD TECHNOLOGY</item>
        <item>GLASS/CERAMICS TECHNOLOGY</item>
        <item>HORTICULTURAL TECHNOLOGY</item>
        <item>HOSPITALITY MANAGEMENT</item>
        <item>LIBRARY AND INFORMATION SCIENCE</item>
        <item>MARKETING</item>
        <item>MECHANICAL ENGINEERING TECHNOLOGY</item>
        <item>MECHATRONICS ENGINEERING TECHNOLOGY</item>
        <item>METALLURGICAL ENGINEERING TECHNOLOGY</item>
        <item>OFFICE TECHNOLOGY AND MANAGEMENT</item>
        <item>PUBLIC ADMINISTRATION</item>
        <item>QUANTITY SURVEYING</item>
        <item>SCIENCE LABORATORY TECHNOLOGY</item>
        <item>STATISTICS</item>
        <item>SURVEYING AND GEOINFORMATICS</item>
        <item>URBAN AND REGIONAL PLANNING</item>
    </string-array>
    <string name="button_chat_room">Chat Room</string>
    <string name="o_level_requirement">O-LEVEL REQUIREMENTS\n(WAEC, NECO, NABTEB)</string>
    <string name="jamb_requirement">JAMB SUBJET COMBINATION\n(ENGLISH IS COMPULSORY)</string>
    <string-array name="kkk_olevel">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="kkk_olevel_following">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="kkk_jamb">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="kkk_jamb_following">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="accountancy_olevel">
        <item>English Language (not Literature in English)</item>
        <item>Mathematics</item>
    </string-array>
    <string-array name="accountancy_olevel_following">
        <item>Economics or Commerce</item>
        <item>Business Methods</item>
        <item>Principles of Accounts</item>
        <item>Literature in English</item>
        <item>Geography</item>
        <item>Office Practice</item>
        <item>Biology/Agricultural Science/Chemistry/Physics</item>
        <item>History/Government</item>
        <item>Typewriting/ Shorthand</item>
        <item>Data Processing/Computer Studies</item>
    </string-array>
    <string-array name="accountancy_jamb">
        <item>Mathematics</item>
    </string-array>
    <string-array name="accountancy_jamb_following">
        <item>Geography</item>
        <item>Commerce/Economics</item>
        <item>Government/History</item>
        <item>Principles of Accounts</item>
    </string-array>
    <string-array name="agric_olevel">
        <item>English Language</item>
        <item>Chemistry</item>
        <item>Agricultural Science or Biology</item>
    </string-array>
    <string-array name="agric_olevel_following">
        <item>Physics</item>
        <item>Economics or Commerce</item>
        <item>Geography</item>
        <item>Fishery or Animal Husbandry</item>
        <item>Health Science</item>
        <item>Computer Science</item>
    </string-array>
    <string-array name="agric_jamb" />
    <string-array name="agric_jamb_following">
        <item>Mathematics</item>
        <item>Chemistry</item>
        <item>Agricultural Science or Biology</item>
        <item>Economics or Commerce</item>
        <item>Geography</item>
        <item>Physics</item>
    </string-array>
    <string-array name="archi_tech_olevel">
        <item>Mathematics</item>
        <item>Physics</item>
        <item>English Language</item>
    </string-array>
    <string-array name="archi_tech_olevel_following">
        <item>Biology</item>
        <item>Fine Art</item>
        <item>Chemistry</item>
        <item>History</item>
        <item>Geography</item>
        <item>Further Mathematics</item>
        <item>Economics or Commerce</item>
        <item>Religious Knowledge</item>
        <item>Technical Drawing</item>
        <item>Business Method</item>
        <item>A pass in Fine Art or Technical Drawing will be an advantage</item>
    </string-array>
    <string-array name="archi_tech_jamb">
        <item>Mathematics</item>
    </string-array>
    <string-array name="archi_tech_jamb_following">
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Technical Drawing</item>
        <item>Geography</item>
    </string-array>
    <string-array name="build_tech_olevel">
        <item>English</item>
        <item>Mathematics</item>
    </string-array>
    <string-array name="build_tech_olevel_following">
        <item>Economics or Commerce</item>
        <item>Technical Drawing or Fine Art</item>
        <item>Chemistry</item>
        <item>Geography</item>
        <item>Further Mathematics</item>
        <item>Woodwork</item>
        <item>Biology</item>
        <item>Religious Knowledge</item>
        <item>Metal Work</item>
        <item>A pass in Fine Arts or Technical Drawing will be an advantage</item>
    </string-array>
    <string-array name="build_tech_jamb">
        <item>Mathematics</item>
        <item>Physics or Technical Drawing</item>
        <item>Chemistry or Fine Arts</item>
    </string-array>
    <string-array name="build_tech_jamb_following" />
    <string-array name="bus_admin_olevel">
        <item>English Language (not Literature in English)</item>
        <item>Mathematics</item>
    </string-array>
    <string-array name="bus_admin_olevel_following">
        <item>Economics or Commerce</item>
        <item>Business Methods</item>
        <item>Principles of Accounts</item>
        <item>Literature in English</item>
        <item>Geography</item>
        <item>Office Practice</item>
        <item>Biology or Agricultural Science or Chemistry or Physics</item>
        <item>History or Government</item>
        <item>Typewriting or Shorthand</item>
        <item>Data Processing or Computer Studies</item>
    </string-array>
    <string-array name="bus_admin_jamb">
        <item>Mathematics</item>
    </string-array>
    <string-array name="bus_admin_jamb_following">
        <item>Geography</item>
        <item>Commerce or Economics</item>
        <item>Government or History</item>
        <item>Principles of Accounts</item>
    </string-array>
    <string-array name="civil_engr_olevel">
        <item>English</item>
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
    </string-array>
    <string-array name="civil_engr_olevel_following">
        <item>Biology or Agricultural Science</item>
        <item>Technical Drawing</item>
        <item>Basic Electronics or Basic Electricity</item>
        <item>Metal Work</item>
        <item>Woodwork</item>
        <item>Further Mathematics</item>
        <item>Geography</item>
        <item>Economics or Commerce</item>
    </string-array>
    <string-array name="civil_engr_jamb">
        <item>Mathematics</item>
        <item>Physics or Technical Drawing</item>
        <item>Chemistry</item>
    </string-array>
    <string-array name="civil_engr_jamb_following" />
    <string-array name="comp_engr_olevel">
        <item>English Language</item>
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
    </string-array>
    <string-array name="comp_engr_olevel_following">
        <item>Biology or Agricultural Science</item>
        <item>Technical Drawing</item>
        <item>Basic Electronics or Basic Electricity</item>
        <item>Auto Mechanics</item>
        <item>Metal Work</item>
        <item>Woodwork</item>
        <item>Further Mathematics</item>
        <item>Geography</item>
        <item>Economics or Commerce</item>
        <item>Data Processing or Computer Studies</item>
    </string-array>
    <string-array name="comp_engr_jamb">
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry or Technical Drawing</item>
    </string-array>
    <string-array name="comp_engr_jamb_following" />
    <string-array name="comp_sci_olevel">
        <item>English Language</item>
        <item>Mathematics</item>
        <item>Physics</item>
    </string-array>
    <string-array name="comp_sci_olevel_following">
        <item>Economics or Commerce</item>
        <item>Geography</item>
        <item>Computer Studies or Data Processing</item>
        <item>Further Mathematics</item>
        <item>Chemistry</item>
        <item>Biology or Agricultural Science</item>
        <item>Typewriting</item>
    </string-array>
    <string-array name="comp_sci_jamb">
        <item>Mathematics</item>
        <item>Physics</item>
    </string-array>
    <string-array name="comp_sci_jamb_following">
        <item>Geography</item>
        <item>Economics or Commerce</item>
        <item>Chemistry</item>
    </string-array>
    <string-array name="electr_engr_olevel">
        <item>English</item>
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
    </string-array>
    <string-array name="electr_engr_olevel_following">
        <item>Biology or Agricultural Science</item>
        <item>Technical Drawing</item>
        <item>Basic Electronics or Basic Electricity</item>
        <item>Auto Mechanics</item>
        <item>Metal Work</item>
        <item>Woodwork</item>
        <item>Further Mathematics</item>
        <item>Geography</item>
        <item>Economics or Commerce</item>
    </string-array>
    <string name="osu_moses">Osu Moses</string>
    <string name="registration">Registration</string>
    <string name="registration_online_details"><![CDATA[
After checking and you are offered admission, <b>Congratulation!!</b><br>
Rush to ICT for proper guideline.
]]></string>
    <string name="registration_course_details"><![CDATA[
<b>Note:</b> Course Registration is open to those who paid school fees <br><br>
<b>1.</b> Login to www.akanuibiamfedpoly.net <br><br>
<b>2.</b> Enter Username ( E.g: 2019/nd/222222/cs). Note: Username is your registration number. <br><br>
<b>3.</b> Enter Password equals “password” (For fresh students) <br><br>
<b>4.</b> On the left pane of the screen, click on course registration <br><br>
<b>5.</b> After that select Register New Courses <br><br>
<b>6.</b> From the dialog box appeared, enter the course code, after entering all, click on register and click SAVE. <br><br>

]]></string>
    <string name="online_registration_fresh_students">Online Registration (Fresh Students)</string>
    <string name="course_registration">Course Registration</string>
</resources>