<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_app"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registration"
                android:textAllCaps="true"
                android:textSize="@dimen/text_header"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/online_registration_title_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/online_registration_fresh_students"
                android:textSize="@dimen/text_header_medium"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/online_registration_detail_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                tools:text="@string/registration_online_details"
                />

            <TextView
                android:id="@+id/course_registration_title_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/course_registration"
                android:textSize="@dimen/text_header_medium"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/course_registration_detail_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                tools:text="@string/registration_course_details"
                />

        </LinearLayout>
    </ScrollView>
</layout>
